@@ -5,6 +5,9 @@ On the road for v0.4.5 (Nausicaa)
 
 ===============================================================================
 
+2006-11-17  Gilles Dumortier <dgil at ieee.org>
+	* Switch to numpy.array representation - VERY INSTABLE (SF bug 1597190)
+
 2006-11-15  Gilles Dumortier <dgil at ieee.org>
 	* Missing some Over picture text (SF bug 1595163)
 	* Euronext Brussels Market : value error (SF bug 1596477)
